--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap');
 
 body {
   margin: 0;
@@ -15,9 +15,15 @@ code {
 }
 
 .body-style {
-  background-color: #FFFCF2;
+  background-color: #efe6dd;
+}
+
+.header {
+  background-color: #efe6dd;
 }
 
 h1 {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Otomanopee One', sans-serif;
+  font-size: 64px;
+  color: #BB4430;
 }
