updated background color on body-style

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 
 .body-style {
-  background-color: #efe6dd;
+  background-color: #E0C1B3;
   font-family: 'Otomanopee One', sans-serif;
 }
 
